[package]
name = "embedded-mqtt"
version = "0.1.0"
edition = "2021"

[workspace]
default-members = ["."]
exclude = ["examples", "aws_device_qualification"]

[dependencies]
cortex-m = { version = "0.7.6", optional = true }

embedded-io-async = { version = "0.6" }
embedded-nal-async = { version = "0.7" }
heapless = { version = "0.8", features = ["serde"] }
num_enum = { version = "0.7", default-features = false }
futures = { version = "0.3.28", default-features = false }
itertools = { version = "0.12", default-features = false }

defmt = { version = "0.3.5", optional = true }
log = { version = "0.4", optional = true }

embassy-sync = { version = "0.6" }
embassy-futures = "0.1"
embassy-time = { version = "0.3" }

embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls", rev = "9de49c2", default-features = false, optional = true }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
crossbeam-utils = "0.8.16"
crossbeam = "0.8.2"
dns-lookup = "2"
async-io = { version = "2", default-features = false }
futures-lite = { version = "2.1", default-features = false, features = ["std"] }

embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6", features = ["log"] }
embassy-time = { version = "0.3", features = ["log", "std", "generic-queue"] }
embedded-io-async = { version = "0.6.0", features = ["std"] }
embedded-io-adapters = { version = "0.6.0", features = ["tokio-1"] }
critical-section = { version = "1.1", features = ["std"] }
embedded-nal-async = "0.7"
tokio = { version = "1.33", default-features = false, features = ["macros", "rt", "net", "time", "io-std"] }

env_logger = "0.11"
futures = { version = "0.3.17" }
log = "0.4.14"
static_cell = { version = "2", features = ["nightly"]}
openssl = "0.10"
rumqttd = "0.19"

[features]
default = ["mqttv5", "max_topic_len_128", "embedded-tls"]

thumbv6 = ["dep:cortex-m"]

embedded-tls = ["dep:embedded-tls"]

mqttv3 = []
mqttv5 = []

qos2 = []

max_topic_len_64 = []
max_topic_len_128 = []
max_topic_len_256 = []

defmt = ["dep:defmt", "embedded-io-async/defmt-03", "heapless/defmt-03", "embedded-tls?/defmt"]
log = ["dep:log", "embedded-tls?/log"]
