[package]
name = "mqttrust"
version = "1.0.0"
edition = "2021"
description = "A lightweight, no_std async MQTT client for embedded systems"
license = "MIT"
repository = "https://github.com/FactbirdHQ/mqttrust"
keywords = ["mqtt", "embedded", "no_std", "async", "embassy"]
categories = ["embedded", "no-std", "network-programming"]
readme = "README.md"

[workspace]
default-members = ["."]
exclude = ["examples", "fuzz", "aws_device_qualification"]

[dependencies]
cortex-m = { version = "0.7.6", optional = true }

embedded-io-async = "0.7"
embedded-nal-async = "0.9"
heapless = { version = "0.9", features = ["serde"] }
num_enum = { version = "0.7", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
itertools = { version = "0.13", default-features = false }
bon = { version = "3", default-features = false }

defmt = { version = "1", optional = true }
log = { version = "0.4", optional = true }

embassy-sync = "0.8"
embassy-futures = "0.1"
embassy-time = "0.5"

embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls", rev = "426f327", default-features = false, optional = true }

portable-atomic = { version = "1.7", default-features = false }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"
crossbeam-utils = "0.8.16"
crossbeam = "0.8.2"
dns-lookup = "2"
async-io = { version = "2", default-features = false }
futures-lite = { version = "2.1", default-features = false, features = ["std"] }

embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.8", features = ["log"] }
embassy-time = { version = "0.5", features = [
    "log",
    "std",
    "generic-queue-8",
] }
embedded-io-async = { version = "0.7.0", features = ["std"] }
embedded-io-adapters = { version = "0.7.0", features = ["tokio-1"] }
critical-section = { version = "1.1", features = ["std"] }
tokio = { version = "1.33", default-features = false, features = [
    "macros",
    "rt",
    "net",
    "time",
    "io-std",
] }

test-log = "0.2.8"
env_logger = "0.11"
futures = { version = "0.3.17" }
log = "0.4"
static_cell = { version = "2", features = [] }
openssl = "0.10"
rumqttd = "0.19"

[features]
default = ["mqttv5"]

thumbv6 = ["dep:cortex-m"]

embedded-tls = ["dep:embedded-tls"]

mqttv3 = []
mqttv5 = []

qos2 = []

std = []

defmt = [
    "dep:defmt",
    "embedded-io-async/defmt",
    "heapless/defmt",
    "embedded-tls?/defmt",
]
log = ["dep:log", "embedded-tls?/log"]

# Private feature used for fuzz testing
_test = []


# BEGIN AUTOGENERATED CONFIG FEATURES
# Generated by gen_config.py. DO NOT EDIT.
max-client-id-len-16 = []
max-client-id-len-32 = []
max-client-id-len-64 = []  # Default
max-client-id-len-128 = []
max-client-id-len-256 = []

max-topic-len-32 = []
max-topic-len-64 = []
max-topic-len-128 = [] # Default
max-topic-len-256 = []

max-sub-topics-per-msg-2 = []
max-sub-topics-per-msg-4 = []
max-sub-topics-per-msg-8 = []  # Default
max-sub-topics-per-msg-16 = []

max-subscribers-2 = []
max-subscribers-4 = []
max-subscribers-8 = []  # Default
max-subscribers-16 = []

max-inflight-2 = []
max-inflight-4 = []
max-inflight-8 = []  # Default
max-inflight-16 = []

max-pubsub-messages-8 = []
max-pubsub-messages-16 = []  # Default
max-pubsub-messages-32 = []
max-pubsub-messages-64 = []
max-pubsub-messages-128 = []
max-pubsub-messages-256 = []

# END AUTOGENERATED CONFIG FEATURES
