[package]
name = "mqttrust"
version = "0.5.2"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "MQTT Client "
readme = "../README.md"
keywords = ["mqtt", "no-std"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/mqttrust"
edition = "2018"
documentation = "https://docs.rs/mqttrust"

[lib]
name = "mqttrust"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
heapless = { version = "^0.7" }
serde = { version = "1.0", features = ["derive"], optional = true }

log = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "^0.3", optional = true }

[features]
default = []

defmt-impl = ["defmt", "heapless/defmt-impl"]

derive = ["serde", "heapless/serde"]
