[package]
name = "mqttrust_core"
version = "0.4.1"
authors = ["Mathias Koch <mk@blackbird.online>"]
description = "MQTT Client "
readme = "../README.md"
keywords = ["mqtt", "no-std"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlackbirdHQ/mqttrust"
edition = "2018"
documentation = "https://docs.rs/mqttrust_core"

[lib]
name = "mqttrust_core"

[[example]]
name = "echo"
required-features = ["log"]

[[example]]
name = "aws_device_advisor"
required-features = ["log"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = { version = "=1.0.0-alpha.6" }
embedded-nal = "0.6.0"
nb = "^1"
heapless = { version = "^0.7", features = ["serde", "x86-sync-pool"] }
mqttrust = { version = "^0.4.1-alpha.0", path = "../mqttrust" }
bbqueue = "0.5"
fugit = { version = "0.3", features = ["defmt"] }
fugit-timer = "0.1.2"

log = { version = "^0.4", default-features = false, optional = true }
defmt = { version = "^0.3", optional = true }

[dev-dependencies]
native-tls = { version = "^0.2" }
dns-lookup = "1.0.3"
env_logger = "0.9.0"

[features]
default = []

std = []

defmt-impl = ["defmt", "mqttrust/defmt-impl", "heapless/defmt-impl", "fugit/defmt"]