[package]
name = "embedded-mqtt-examples-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-mqtt = { path = "../../" }

portable-atomic = { version = "1.0.2", features = [
    "unsafe-assume-single-core",
] }

static_cell = { version = "2", features = ["nightly"] }
defmt = "0.3.4"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8.5", default-features = false }
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
embedded-nal-async = { version = "0.8" }


embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "rp2040",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-futures = { version = "0.1.0" }
cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }


[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[package.metadata.cargo-machete]
ignored = ["cortex-m", "defmt-rtt", "panic-probe", "portable-atomic"]


[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "80cb2bc" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "80cb2bc" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "80cb2bc" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "80cb2bc" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "80cb2bc" }
embassy-time-queue-driver = { git = "https://github.com/embassy-rs/embassy", rev = "80cb2bc" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "80cb2bc" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "80cb2bc" }
embassy-net-driver-channel = { git = "https://github.com/embassy-rs/embassy", rev = "80cb2bc" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "80cb2bc" }
