[package]
name = "mqttrust-examples-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
mqttrust = { path = "../../" }

portable-atomic = { version = "1.13.1", features = [
    "unsafe-assume-single-core",
] }

static_cell = "2"
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }
rand = { version = "0.8.5", default-features = false }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
embedded-nal-async = { version = "0.9" }


embassy-embedded-hal = { version = "0.5", features = ["defmt"] }
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-executor = { version = "0.10", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.10", features = [
    "defmt",
    "rp2040",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-net = { version = "0.9.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-futures = { version = "0.1.2" }
cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }


[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[package.metadata.cargo-machete]
ignored = ["cortex-m", "defmt-rtt", "panic-probe", "portable-atomic"]
