[package]
name = "embedded-mqtt-examples-std"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "embassy-async-mqttv3"
required-features = ["embedded-mqtt/mqttv3"]

[dependencies]
embedded-mqtt = { path = "../../", features = ["log"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.4.0", features = ["log"] }
embassy-time = { version = "0.1.3", features = ["log", "std", "nightly", "generic-queue"] }
embedded-io-async = { version = "0.6.0", features = ["std"] }
embedded-io-adapters = { version = "0.6.0", features = ["tokio-1"] }
critical-section = { version = "1.1", features = ["std"] }
embedded-nal-async = "0.7"
tokio = { version = "1.33", default-features = false, features = ["macros", "rt", "net", "time", "io-std"] }

env_logger = "0.10.0"
futures = { version = "0.3.17" }
log = "0.4.14"
static_cell = { version = "2", features = ["nightly"]}

[patch.crates-io]
embassy-sync = { path = "../../../embassy/embassy-sync" }
embassy-time = { path = "../../../embassy/embassy-time" }
embassy-futures = { path = "../../../embassy/embassy-futures" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
